--- a/package.json
+++ b/package.json
@@ -1,28 +1,20 @@
 {
-  "name": "typescript-react-lib-swc",
-  "version": "1.1.2",
-  "author": "maxgfr",
+  "name": "call-modal",
+  "version": "1.0.0",
+  "author": "SMCodesP <samuel.silva513@etec.sp.gov.br>",
   "license": "MIT",
-  "description": "A minimalist typescript swc starter for react",
+  "description": "A minimalist call modal using static methods",
   "main": "./build/index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/maxgfr/typescript-react-lib-swc.git"
+    "url": "https://github.com/SMCodesP/call-modal.git"
   },
   "bugs": {
-    "url": "https://github.com/maxgfr/typescript-react-lib-swc/issues"
+    "url": "https://github.com/SMCodesP/call-modal/issues"
   },
-  "homepage": "https://github.com/maxgfr/typescript-react-lib-swc#readme",
+  "homepage": "https://github.com/SMCodesP/call-modal#readme",
   "files": [
     "build"
-  ],
-  "keywords": [
-    "boilerplate",
-    "typescript",
-    "swc",
-    "react",
-    "storybook",
-    "@testing-library"
   ],
   "scripts": {
     "dev": "nodemon",
@@ -77,6 +69,7 @@
     "@typescript-eslint/eslint-plugin": "5.49.0",
     "@typescript-eslint/parser": "5.49.0",
     "babel-loader": "^9.0.0",
+    "bootstrap": "^5.3.0",
     "eslint": "8.32.0",
     "eslint-config-prettier": "8.6.0",
     "eslint-plugin-jest": "27.2.1",
@@ -89,6 +82,7 @@
     "nodemon": "2.0.20",
     "prettier": "2.8.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "rimraf": "3.0.2",
     "semantic-release": "^19.0.5",
