--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "call-modal",
-  "version": "1.0.0",
+  "version": "1.0.7",
   "author": "SMCodesP <samuel.silva513@etec.sp.gov.br>",
   "license": "MIT",
   "description": "A minimalist call modal using static methods",
   "main": "./build/index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/SMCodesP/call-modal.git"
+    "url": "git+https://github.com/SMCodesP/call-modal.git"
   },
   "bugs": {
     "url": "https://github.com/SMCodesP/call-modal/issues"
@@ -87,5 +87,17 @@
     "rimraf": "3.0.2",
     "semantic-release": "^19.0.5",
     "typescript": "^4.8.4"
+  },
+  "types": "./build/index.d.ts",
+  "dependencies": {
+    "eslint-scope": "^7.2.0",
+    "eslint-utils": "^3.0.0",
+    "eslint-visitor-keys": "^3.4.1"
+  },
+  "exports": {
+    ".": {
+      "import": "./build/index.js",
+      "require": "./build/index.js"
+    }
   }
 }
