--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "call-modal",
-  "version": "1.0.8",
+  "version": "2.0.0",
   "author": "SMCodesP <samuel.silva513@etec.sp.gov.br>",
   "license": "MIT",
   "description": "A minimalist call modal using static methods",
@@ -13,25 +13,15 @@
     "url": "https://github.com/SMCodesP/call-modal/issues"
   },
   "homepage": "https://github.com/SMCodesP/call-modal#readme",
-  "files": [
-    "build"
-  ],
+  "files": ["build"],
   "scripts": {
     "dev": "nodemon",
-    "develop": "node -r @swc-node/register ./src/index.ts",
-    "test": "jest",
-    "test:watch": "jest --watch",
+    "develop": "bun -r @swc-node/register ./src/index.ts",
     "clean": "rimraf build",
     "build": "tsc -p tsconfig.build.json",
     "build:watch": "tsc -w -p tsconfig.build.json",
     "build:swc": "swc ./src -d build",
     "build:swc:watch": "swc ./src -d build -w",
-    "lint": "eslint ./src --ext .ts,.tsx",
-    "prettier": "prettier --write './src/**/*.{ts,js,json,tsx,jsx}'",
-    "storybook:start": "start-storybook -p 6006",
-    "storybook:build": "build-storybook",
-    "storybook:deploy": "npm run storybook:build && gh-pages -d storybook-static",
-    "storybook:deploy:action": "npm run storybook:build && gh-pages -d storybook-static -u \"github-actions-bot <support+actions@github.com>\"",
     "release": "semantic-release"
   },
   "peerDependencies": {
@@ -39,60 +29,34 @@
     "react-dom": "*"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.2",
-    "@semantic-release/changelog": "^6.0.2",
-    "@semantic-release/commit-analyzer": "^9.0.2",
+    "@biomejs/biome": "1.8.3",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/commit-analyzer": "^13.0.0",
     "@semantic-release/git": "^10.0.1",
-    "@semantic-release/github": "^8.0.6",
-    "@semantic-release/npm": "^9.0.1",
-    "@semantic-release/release-notes-generator": "^10.0.3",
-    "@storybook/addon-actions": "^6.5.13",
-    "@storybook/addon-essentials": "^6.5.13",
-    "@storybook/addon-interactions": "^6.5.13",
-    "@storybook/addon-links": "^6.5.13",
-    "@storybook/builder-webpack4": "^6.5.13",
-    "@storybook/manager-webpack4": "^6.5.13",
-    "@storybook/react": "^6.5.13",
-    "@storybook/testing-library": "^0.0.13",
-    "@swc-node/register": "1.5.5",
-    "@swc/cli": "0.1.59",
-    "@swc/core": "1.3.27",
-    "@swc/jest": "0.2.24",
-    "@swc/plugin-styled-jsx": "^1.5.20",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^14.4.3",
-    "@types/jest": "29.2.6",
-    "@types/node": "18.11.18",
-    "@types/react": "^18.0.25",
-    "@types/react-dom": "^18.0.8",
-    "@typescript-eslint/eslint-plugin": "5.49.0",
-    "@typescript-eslint/parser": "5.49.0",
-    "babel-loader": "^9.0.0",
-    "bootstrap": "^5.3.0",
-    "eslint": "8.32.0",
-    "eslint-config-prettier": "8.6.0",
-    "eslint-plugin-jest": "27.2.1",
-    "eslint-plugin-jsx-a11y": "^6.6.1",
-    "eslint-plugin-react": "^7.31.10",
-    "eslint-plugin-storybook": "^0.6.7",
-    "gh-pages": "^4.0.0",
-    "jest": "29.3.1",
-    "jest-environment-jsdom": "^29.3.0",
-    "nodemon": "2.0.20",
-    "prettier": "2.8.3",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.7.4",
-    "react-dom": "^18.2.0",
-    "rimraf": "3.0.2",
-    "semantic-release": "^19.0.5",
-    "typescript": "^4.8.4"
+    "@semantic-release/github": "^10.1.7",
+    "@semantic-release/npm": "^12.0.1",
+    "@semantic-release/release-notes-generator": "^14.0.1",
+    "@swc-node/register": "1.10.9",
+    "@swc/cli": "0.4.0",
+    "@swc/core": "1.7.21",
+    "@swc/plugin-styled-jsx": "^3.0.1",
+    "@types/node": "22.5.1",
+    "@types/react": "^18.3.4",
+    "@types/react-dom": "^18.3.0",
+    "bootstrap": "^5.3.3",
+    "gh-pages": "^6.1.1",
+    "nodemon": "3.1.4",
+    "react": "^18.3.1",
+    "react-bootstrap": "^2.10.4",
+    "react-dom": "^18.3.1",
+    "rimraf": "6.0.1",
+    "semantic-release": "^24.1.0",
+    "typescript": "^5.5.4"
   },
   "types": "./build/index.d.ts",
+  "type": "module",
   "dependencies": {
-    "eslint-scope": "^7.2.0",
-    "eslint-utils": "^3.0.0",
-    "eslint-visitor-keys": "^3.4.1"
+    "@uidotdev/usehooks": "^2.4.1"
   },
   "exports": {
     ".": {
