--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -14,6 +14,6 @@ jobs:
         with:
           bun-version: latest
       - name: Install
-        run: bun run
+        run: bun install
       - name: Lint
         run: bun run lint
