--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           bun-version: latest
       - name: Install
-        run: bun run install --frozen-lockfile
+        run: bun install
       - name: Build
         run: bun run build
       - name: Release
