--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
   },
   "types": "./build/index.d.ts",
   "dependencies": {
-    "@uidotdev/usehooks": "^2.4.1"
+    "@uidotdev/usehooks": "^2.4.1",
+    "uuid": "^11.0.2"
   },
   "exports": {
     ".": {
