refactor: adjust ModalProps properties to make them optional

--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
     "url": "https://github.com/SMCodesP/call-modal/issues"
   },
   "homepage": "https://github.com/SMCodesP/call-modal#readme",
-  "files": [
-    "build"
-  ],
+  "files": ["build"],
   "scripts": {
     "dev": "nodemon",
     "develop": "bun -r @swc-node/register ./src/index.ts",
