--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/node": "24.3.0",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
+    "@types/uuid": "^11.0.0",
     "bootstrap": "^5.3.7",
     "gh-pages": "^6.3.0",
     "nodemon": "3.1.10",
